# watccha

./: .gitignore  Cargo.toml  README.md  build.rs  srconfig.toml
src/: config.toml  lib.rs  main.rs  setup.rs
src/bindings/: erc20.rs
src/events/: erc20.rs  erc20_listener.rs  generalized.rs  mod.rs
src/utils/: config.rs  ens_resolver.rs  is_fn.rs  mod.rs
