[package]
name = "ethden2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.5.0"
eyre = "0.6.8"
lettre = "0.10.3"
lettre_email = "0.9.4"
tokio = { version = "1.0", features = ["full"] }
