[package]
name = "ethden2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = "1.5.0"
eyre = "0.6.8"
lettre = "0.10.3"
lettre_email = "0.9.4"
reqwest = "0.11.14"
serde_json = "1.0.93"
tokio = { version = "1.0", features = ["full"] }
toml = "0.7.2"
tui = "0.19.0"


[build-dependencies]
ethers = "1.5.0"

[[bin]]
name = "setup"
path = "./src/setup.rs"
